# kubernetes-leak-detector

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  images.md  pyproject.toml
docs/: solutions.md
k8s/: cronjob.yaml  rbac.yaml
src/leak_detector/: __init__.py  cli.py  notify.py  report.py  scanner.py
